fix: Simplify the webapp startup sequence